# tackle-detection-model-comparison

./: .env.example  .gitignore  README.md  dump_dinov3_kassab_format.py  dump_kassab_split.py  extract_features.py  extraction_throughput.csv  pyproject.toml  run_attn_windows.sh  run_dump_dinov3_kassab_format.sh  run_eval_spatial.sh  run_eval_temporal_sliding.sh  run_extract_dinov3_large_array.sh  run_extract_vjepa2_dense_w10_5fps.sh  run_profile_spatial.sh  run_profile_temporal_dinov3.sh  run_profile_temporal_vjepa2.sh  run_train_eval_spatial.sh  run_train_eval_spatial_kfold.sh  run_train_eval_temporal.sh  run_train_eval_temporal_dinov3.sh  run_train_eval_temporal_vjepa2.sh  setup.sh  sweep_spatial.sh  sweep_temporal_dinov3.sh  sweep_temporal_vjepa2.sh  verify_kassab_test_split.py
.github/: copilot-instructions.md
analysis/: attn_window.py  class_distribution.py  event_durations.py  event_positioning.py  event_window_coverage.py  feature_clustering.py  frame_counts.py  multi_seed_results.py  run_attn_windows.sh  run_dump_dinov3_kassab_format.sh  run_feature_clustering.sh  show_frame.py  show_window.py  verify_dinov3_kassab_features.py
slurm_logs/: team_bias_3260499.err
soccernet_experiment/: README.md  build_verification.py  download_half.py  run_extract.sh  run_predict.sh  run_predict_spatial.sh  run_predict_vjepa2.sh
src/: aggregate_kfold_spatial.py  config.py  eval_spatial.py  eval_spatial_centred.py  eval_temporal.py  head_efficiency.py  plot_utils.py  postprocess.py  predict_soccernet.py  predict_soccernet_spatial.py  predict_soccernet_vjepa2.py  utils.py  (+6 more)
(+45 files in other folders)
